--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Semantics and pragmatics, KIK-LG103\n",
-    "## Lab session 1\n",
+    "## Lab session 1, Part 2\n",
     "\n",
     "In this lab we will explore the connections between natural and programming languages using the Python programming language. Try to always relate the programming concepts to what you know about linguistic semantics.\n",
     "\n",
