--- a/lab1/class-assignment/lab1-class-part1.ipynb
+++ b/lab1/class-assignment/lab1-class-part1.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "You download your notebook (that is, this page that you are now seeing) by selecting _File -> Download as -> Notebook (.ipynb)_. You can select a file name and a destination directory on your own computer, where this file will be stored.\n",
     "\n",
-    "When you come back later, you start a new session at notebooks.csc.fi. First navigate to the correct folder (for instance, morf-synt-2018/Lab1/ClassAssignment/). Then click the _Upload_ button in the top right corner, and choose your .ipynb file from your disk.\n",
+    "When you come back later, you start a new session at notebooks.csc.fi. First navigate to the correct folder (for instance, sem-prag-2018/lab1/class-assignment/). Then click the _Upload_ button in the top right corner, and choose your .ipynb file from your disk.\n",
     "\n",
     "If you work on different computers from session to session, you need to make sure that you can access your stored file. For instance, you can email the .ipynb file as an attachment to yourself or upload the file to your CSC account on taito-shell or save the file on a memory stick that you take with you.\n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "When you are done with your home assignment, you need to upload your work on the course Moodle site. What we want you to upload is _not_ your notebook, but a **Python program file** instead. You can download your notebook as a Python file by selecting _File -> Download as -> Python (.py)_. Again, store this file on the disk of your local computer. Then go to Moodle and upload this file.\n",
     "\n",
-    "**Your SECOND TASK** is to practise downloading your notebook as a Python program and upload it on Moodle. There is an assignment on the course Moodle site that is called _Harjoituspalautus ensimmäiselle ryhmälle (8.2.). Use that assignment to upload your Python program. The teachers will check that the file has the right format. Do this right away. Don't wait until the end of the lab session."
+    "**Your SECOND TASK** is to practise downloading your notebook as a Python program and upload it on Moodle. There is an assignment on the course Moodle site that is called _Harjoituspalautus ensimmäiselle ryhmälle (8.2.)_. Use that assignment to upload your Python program. The teachers will check that the file has the right format. Do this right away. Don't wait until the end of the lab session."
    ]
   }
  ],
