--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"\")"
@@ -73,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(8 + 2)/5"
@@ -103,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The '#' symbols in code signal that whatever comes after is\n",
@@ -170,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"What is your age?\")\n",
@@ -223,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "year = \"1984\"\n",
@@ -248,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"a\" + \"b\" + \"c\""
@@ -274,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"What's your name?\")\n",
@@ -303,7 +289,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -326,9 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Change this to 'int'\n",
@@ -367,7 +350,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -410,9 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Notice that we do not always have to assign\n",
@@ -425,7 +405,35 @@
     "#\n",
     "print(\"John\" != \"Maggie\")\n",
     "\n",
-    "print(3 < 2)"
+    "print(3 <= 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice here the difference between the assignment operator '=' and the comparison (equality) operator '==':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# len(\"Maggie\") == 6 returns 'True' so 'example'\n",
+    "# is assigned the boolean 'True'.\n",
+    "example = len(\"Maggie\") == 6\n",
+    "#       ^                ^\n",
+    "#   assignment        equality\n",
+    "\n",
+    "print(example)\n",
+    "if example == True:\n",
+    "    print(\"Yes, it is true!\")\n",
+    "else:\n",
+    "    print(\"I'm afraid it is not true..\")"
    ]
   },
   {
@@ -446,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(\"John\" == \"Maggie\") or (not (3 <= 2) and (\"a\" != \"b\"))"
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +534,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -539,8 +544,8 @@
     "for name in all_names_sorted:\n",
     "    print(name, \"is a good name, I like it!\")\n",
     "    \n",
-    "amount_of_names = len(all_names)\n",
-    "print(\"It looks like we had\", amount_of_names, \"names there.\")"
+    "number_of_names = len(all_names)\n",
+    "print(\"It looks like we had\", number_of_names, \"names there.\")"
    ]
   },
   {
@@ -561,9 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "[1, 1, 2, 3, 5, 8] != sorted( [8, 3, 1, 2, 5, 1] ) "
@@ -592,9 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "number = 0\n",
@@ -621,9 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "characters = [\"c\", \"o\", \"v\", \"f\", \"e\", \"f\", \"e\"]\n",
@@ -645,7 +644,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -666,9 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is one way of splitting a string into multiple lines for readability,\n",
@@ -699,7 +695,7 @@
     "\n",
     "---\n",
     "\n",
-    "As you probably figured out, the set is a collection of *unique* elements. Any duplicate elements in the list (*ninja, mutant*) only show up once in the set. In this case, the list can be thought of as representing the *word tokens* of the original sentence (in the original order), while the set represents the *word types* (in no particular order).\n",
+    "As you probably figured out, the set is a collection of *unique* elements. Any duplicate elements in the list (*ninja, mutant*) only show up once in the set. In this case, the list can be thought of as representing the *word tokens* of the original sentence (in the original order), while the set represents the *word types* (in no particular order). *(If the distinction between tokens and types is unfamiliar to you, see for example [this discussion](https://www.researchgate.net/post/What_is_the_difference_between_Word_Type_and_Token) on ResearchGate.)*\n",
     "\n",
     "We can construct a set also without the `set` function. Below is an example of how to do this with curly brackets (in contrast to lists where we use square brackets). The set is also another example of an **iterable**, that is, we can go through the elements in the set using a for-loop like we did with lists."
    ]
@@ -707,9 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nice_words = {\"nice\", \"nicer\", \"nicest\"}\n",
@@ -761,9 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pizzas = {\"Quattro Stagioni\", \"Funghi\", \"Napolitana\"}\n",
@@ -789,9 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sentence = [\"Louie\", \"I\", \"think\", \"this\", \"is\", \"the\",\n",
@@ -813,24 +803,8 @@
     "       0      1      2       3\n",
     "      -4     -3     -2      -1\n",
     "      \n",
-    "As you can see, you can also access an element by starting the indexing from the end.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Ex 4.1.1** TODO\n",
-    "\n",
-    "---"
+    "As you can see, you can also access an element by starting the indexing from the end."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -843,7 +817,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -861,7 +834,24 @@
    "source": [
     "With slicing, we can access a part longer than one element of a list or a string. For example, in the first print statement above we access the second and third letters of the word using `word[1:3]`. As you might notice, picking the right indices here is an error-prone process. First of all, we must remember that the indexing starts from 0, so the index of the second element is 1. Second, in the construction for slicing `[startindex:endindex]`, the `endindex` is **exclusive**, that is, the element in that index is not taken into account. The `startindex` is inclusive, however. In other words, `word[1:3]` means '*the substring of `word` from index 1 (inclusive) to index 3 (exclusive)*'.\n",
     "\n",
-    "In the second and third print statements we see that only the starting or ending index is given. If the starting index is missing, the slicing implicitly starts from the beginning of the string. If the ending index is missing, the slicing is inferred to extend to the end of the string. We can also use negative indices in slicing."
+    "In the second and third print statements we see that only the starting or ending index is given. If the starting index is missing, the slicing implicitly starts from the beginning of the string. If the ending index is missing, the slicing is inferred to extend to the end of the string. We can also use negative indices in slicing.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ex 4.2.1** Play with indexing and slicing in the code cell below. Make sure you understand how the slicing ranges work, and also familiarize yourself with the very useful negative indexing.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = [\"Play\", \"it\", \"once\", \"Sam\"]\n",
+    "\n",
+    "print(sentence[0:2])"
    ]
   },
   {
@@ -876,7 +866,7 @@
     "\n",
     "The best way to think about functions is that they *encapsulate* a (small) task within the larger program. A stereotypical function 1) takes in data, 2) processes the data in some way, and 3) returns the desired result. \n",
     "\n",
-    "Let's use the `len` function as an example. `len` takes in a sequence (a list or a string), calculates the amount of atomic elements in the sequence (i.e. its length) and returns the length. Not every function has to return anything, however. The `print` function prints out the data to standard output and doesn't return any value.\n",
+    "Let's use the `len` function as an example. `len` takes in a sequence (a list or a string), calculates the number of atomic elements in the sequence (i.e. its length) and returns the length. Not every function has to return anything, however. The `print` function prints out the data to standard output and doesn't return any value.\n",
     "\n",
     "In the code cell below, we have implemented a function `ends_with`, which takes in two strings and returns `True` if `string1` ends in `string2`, and `False` if it doesn't. Look carefully at the syntax of defining a new function."
    ]
@@ -884,14 +874,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ends_with(string1, string2):\n",
     "    # Using len() and slicing we can get the\n",
-    "    # correct amount of letters from the end \n",
+    "    # correct number of letters from the end \n",
     "    # of the string\n",
     "    string_end = string1[-len(string2):]\n",
     "\n",
@@ -930,9 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def starts_with(string1, string2):\n",
@@ -954,9 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The rule is: person1 is person2's son if person1's name \n",
