--- a/lab1/home-assignment/lab1-home.ipynb
+++ b/lab1/home-assignment/lab1-home.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "### Ex 1.1\n",
     "\n",
-    "In this exercise we will recall some of the things we learned about lists and sets in the class. Our task is to calculate the amount of word tokens and word types in *Moby Dick*. The simplest way of doing this will be using the `len` and `set` functions as we saw in the class. \n",
+    "In this exercise we will recall some of the things we learned about lists and sets in the class. Our task is to calculate the number of word tokens and word types in *Moby Dick*. The simplest way of doing this will be using the `len` and `set` functions as we saw in the class. \n",
     "\n",
     "Alternatively, you can use iteration (for-loop) to go through the texts and add new items to the vocabulary one by one. For this solution you need two new constructs:\n",
     "\n",
@@ -65,10 +65,10 @@
     "    \n",
     "Your code should output two lines:\n",
     "\n",
-    "    The amount of word tokens in Moby Dick: 260819\n",
-    "    The amount of word types in Moby Dick: 19317\n",
+    "    The number of word tokens in Moby Dick: 260819\n",
+    "    The number of word types in Moby Dick: 19317\n",
     "    \n",
-    "These are the correct token and type amounts as well, so make sure your output matches these number exactly."
+    "These are the correct token and type counts as well, so make sure your output matches these number exactly."
    ]
   },
   {
@@ -90,9 +90,9 @@
     "\n",
     "**1.1 in a nutshell + grading:**\n",
     "\n",
-    "1. Calculate the word token amount of *Moby Dick*.\n",
-    "2. Calculate the word type amount of *Moby Dick*\n",
-    "3. Print out the word token and type amounts.\n",
+    "1. Calculate the word token count of *Moby Dick*.\n",
+    "2. Calculate the word type count of *Moby Dick*\n",
+    "3. Print out the word token and type counts.\n",
     "\n",
     "You can get a maximum of 0.5 points from this exercise. Partial points can also be awarded so please return even incomplete solutions. \n",
     "\n",
@@ -109,9 +109,9 @@
     "\n",
     "Let's continue with the theme of calculating type counts. In the next few exercises we will recall what we learned about functions. \n",
     "\n",
-    "Your second task is to implement what you did above, but this time turn it into a function `type_count(text)`. The function should take in a list of text and output its amount of word types. Refer back to the class assignments if you need a refresher on functions.\n",
+    "Your second task is to implement what you did above, but this time turn it into a function `type_count(text)`. The function should take in a list of text and output its number of word types. Refer back to the class assignments if you need a refresher on functions.\n",
     "\n",
-    "So, implement the function `type_count(text)` below. You can easily check its correctness by comparing the output to the type amount above, for example.\n",
+    "So, implement the function `type_count(text)` below. You can easily check its correctness by comparing the output to the type count above, for example.\n",
     "\n",
     "    In [1]: print(type_count(moby_dick))\n",
     "    Out[1]: 19317\n",
@@ -132,8 +132,9 @@
    "outputs": [],
    "source": [
     "def type_count(text):\n",
-    "    # Calculate the amount of word types\n",
-    "    # in the text and return the amount.\n",
+    "    # Calculate the number of word types\n",
+    "    # in the text and return the number\n",
+    "    # instead of -1\n",
     "    return -1"
    ]
   },
@@ -145,7 +146,7 @@
     "\n",
     "**1.2 in a nutshell + grading:**\n",
     "\n",
-    "1. Define a function `type_count(text)` that takes as an argument a list of text and returns the amount of word types.\n",
+    "1. Define a function `type_count(text)` that takes as an argument a list of text and returns the number of word types.\n",
     "\n",
     "You can get a maximum of 0.5 points from this exercise. Partial points can also be awarded so please return even incomplete solutions. \n",
     "\n",
@@ -160,7 +161,7 @@
     "\n",
     "### Ex 1.3\n",
     "\n",
-    "The function `type_count` is definitely useful, but sometimes we want to calculate the frequency of a single word type, not the overall amount of types. Let's implement a function for that.\n",
+    "The function `type_count` is definitely useful, but sometimes we want to calculate the frequency of a single word type, not the overall number of types. Let's implement a function for that.\n",
     "\n",
     "In this task, you need to use a for-loop and conditionals, keep count of the frequency of the word, and wrap all of this into a nice function `frequency_of(word, text)`. In plain English your function should: **1)** Initialize an int variable (for example `frequency`) to zero for keeping count of the frequency, **2)** go through the text using a for loop, **3)** for each word in text, use an if statement to check if the word is the one we're keeping count of, **4)** increment the int variable by one if it is the same word, and **5)** return the correct int value. \n",
     "\n",
@@ -185,7 +186,8 @@
    "source": [
     "def frequency_of(word, text):\n",
     "    # Calculate the frequency of 'word'\n",
-    "    # in 'text' here and return the frequency.\n",
+    "    # in 'text' here and return the frequency\n",
+    "    # instead of -1\n",
     "    return -1\n",
     "\n",
     "# Print out a few frequencies here\n"
@@ -292,7 +294,7 @@
     "\n",
     "    capital(Berlin, Germany)    “Berlin is the capital of Germany.”\n",
     "\n",
-    "Your first task is to implement the logical predicate as a Python function `capital(city, country)` that returns `True` if `city` is the capital of `country`. Make sure your function can handle at least the capitals of Germany and Finland:\n",
+    "Your first task is to implement the logical predicate as a Python function `capital(city, country)` that returns `True` if `city` is the capital of `country`. You most likely want to use an if-statement. Make sure your function can handle at least the capitals of Germany and Finland:\n",
     "\n",
     "    In [1]: print(capital(\"Berlin\", \"Germany\"))\n",
     "            print(capital(\"Helsinki\", \"Finland\"))\n",
