--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"\")"
@@ -71,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(8 + 2)/5"
@@ -99,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The '#' symbols in code signal that whatever comes after is\n",
@@ -116,7 +122,7 @@
    "source": [
     "The link between the contents and the identifier is arbitrary, that is, the contents are not necessarily reflected in the form. Does this sound familiar to a linguist? \n",
     "\n",
-    "Leäts illustrate variables with a familiar example. Think of the pronouns. In one context the pronoun 'it' might refer to a car (\"Did you crash it?\"), in others to a cat (\"It's cute, isn't it?\"). The form 'it' has nothing to do with what a car looks like or how it functions. The same is true of variables. The name of the variable can be almost anything (excluding most special characters and some reserved words like **if** and **and**). Also, we might first assign the variable one value (\"Cathy\") and later change it to another (\"Newman\").\n",
+    "Let's illustrate variables with a familiar example. Think of the pronouns. In one context the pronoun 'it' might refer to a car (\"Did you crash it?\"), in others to a cat (\"It's cute, isn't it?\"). The form 'it' has nothing to do with what a car looks like or how it functions. The same is true of variables. The name of the variable can be almost anything (excluding most special characters and some reserved words like **if** and **and**). Also, we might first assign the variable one value (\"Cathy\") and later change it to another (\"Newman\").\n",
     "\n",
     "---\n",
     "\n",
@@ -164,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"What is your age?\")\n",
@@ -238,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"a\" + \"b\" + \"c\""
@@ -262,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"What's your name?\")\n",
@@ -289,6 +301,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -311,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Change this to 'int'\n",
@@ -343,13 +358,14 @@
     "    \n",
     "\"Conditional execution of actions\" sounds cumbersome and boring, though. Fortunately computer scientists have come up with a much cooler name for this concept: **Flow control**\n",
     "\n",
-    "Below you see a few lines of code illustrating basic flow control. Try to figure out what each part of the code does before reading forward. You can also try changing the value of `'person_is_ex'` to `False`, or `person_name` to something else and see what happens. If you find this hard, don't worry; we'll deconstruct the code in a minute."
+    "Below you see a few lines of code illustrating basic flow control. Try to figure out what each part of the code does before reading on. You can also try changing the value of `'person_is_ex'` to `False`, or `person_name` to something else and see what happens. If you find this hard, don't worry; we'll deconstruct the code in a minute."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -367,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So what's unfamiliar here? There seems to be something fishy about the assignment of the variable `'person_is_ex'`. Below that, there are a few lines of code that seem like normal english with a few words highlighted (if, is, and, else). Also, what's with the whitespace in front of the print statements? Let's attack each of these points individually.\n",
+    "So what's unfamiliar here? There seems to be something fishy about the assignment of the variable `'person_is_ex'`. Below that, there are a few lines of code that remotely resemble English with a few words highlighted (if, is, and, else). Also, what's with the whitespace in front of the print statements? Let's attack each of these points individually.\n",
     "\n",
     "#### 2.1. Boolean values\n",
     "\n",
@@ -392,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Notice that we do not always have to assign\n",
@@ -419,11 +437,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# len(\"Maggie\") == 6 returns 'True' so 'example'\n",
+    "# len(\"Maggie\") == 6 returns 'True', so 'example'\n",
     "# is assigned the boolean 'True'.\n",
     "example = len(\"Maggie\") == 6\n",
     "#       ^                ^\n",
@@ -454,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(\"John\" == \"Maggie\") or (not (3 <= 2) and (\"a\" != \"b\"))"
@@ -507,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "food = \"cucumber\"\n",
+    "food = \"eggplant\"\n",
     "\n",
     "if food == \"eggplant\":\n",
     "    print(\"Meh.\")\n",
@@ -534,6 +555,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -566,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "[1, 1, 2, 3, 5, 8] != sorted( [8, 3, 1, 2, 5, 1] ) "
@@ -576,7 +600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next in the code (4-5) we print out a few compliments to the turtles, going through the names in alphabetical order. Going through all the elements in a list one by one is called **iteration**. The syntax for simple iteration is very intuitive in Python. This is called the for-loop:\n",
+    "Next in the code (4-5) we print out a few compliments to the turtles (and the rat), going through the names in alphabetical order. Going through all the elements in a list one by one is called **iteration**. The syntax for simple iteration is very intuitive in Python. This is called the for-loop:\n",
     "\n",
     "    for thing in list:\n",
     "        do the thing\n",
@@ -595,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "number = 0\n",
@@ -622,7 +648,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "characters = [\"c\", \"o\", \"v\", \"f\", \"e\", \"f\", \"e\"]\n",
@@ -644,6 +672,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -664,7 +693,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This is one way of splitting a string into multiple lines for readability,\n",
@@ -703,7 +734,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nice_words = {\"nice\", \"nicer\", \"nicest\"}\n",
@@ -755,7 +788,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pizzas = {\"Quattro Stagioni\", \"Funghi\", \"Napolitana\"}\n",
@@ -781,7 +816,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence = [\"Louie\", \"I\", \"think\", \"this\", \"is\", \"the\",\n",
@@ -817,6 +854,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -846,7 +884,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence = [\"Play\", \"it\", \"once\", \"Sam\"]\n",
@@ -874,7 +914,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ends_with(string1, string2):\n",
@@ -918,7 +960,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def starts_with(string1, string2):\n",
@@ -940,7 +984,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The rule is: person1 is person2's son if person1's name \n",
