add nltk book link

--- a/lab1/home-assignment/lab1-home.ipynb
+++ b/lab1/home-assignment/lab1-home.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "Remember, you can always ask for help on the Moodle discussion forum, as well as visit Mathias or Eetu during the specified office hours. Discussions between student colleagues is encouraged, but always implement your own solutions and do not copy your friend's answers. \n",
     "\n",
+    "An additional source for reading is the the [Chapter 1](http://www.nltk.org/book/ch01.html) in the book [Natural Language Processing with Python](http://www.nltk.org/book/). The first chapter covers a lot of additional material as well, so be selective if you decide to read it. Most relevant for this lab are the sections 1.4, 2 and 4.\n",
+    "\n",
     "Have fun and good luck!\n",
     "\n",
     "## Part 1 .\n",
@@ -361,7 +363,6 @@
     "\n",
     "       if name == \"John\" or (name[0] == \"P\" and name[-1]) == \"e\"): # Do not use these conditions\n",
     "           return True                                             # but invent your own\n",
-    "\n",
     "\n",
     "2. Define a function `likes_milk(name)` that takes as an argument a string `name` and returns a boolean value `True/False` depending on whether `name` likes milk.\n",
     "\n",
