--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -213,7 +213,7 @@
     "    \n",
     "---\n",
     "\n",
-    "**Ex 1.2.1** Run the cell below and inspect the output. What went wrong? Correct the code and you might figure out the meaning of life (and see why it's important to keep in mind the distinction between strings and ints).\n",
+    "**Ex 1.2.1** Run the cell below and inspect the output. What went wrong? Correct the code and you might figure out the meaning of life (and see why it's important to keep in mind the distinction between strings and ints). The goal is to make the calculation on the second line work.\n",
     "\n",
     "Note: **str** means the string type.\n",
     "\n",
@@ -223,11 +223,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "year = \"1984\"\n",
-    "(300 + 404 + year)/64"
+    "number = \"1984\"\n",
+    "(300 + 404 + number)/64"
    ]
   },
   {
@@ -264,7 +266,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 1.2.3** Add a line of code where you initialize the variable with some (string) value and try again.\n",
+    "**Ex 1.2.3** Add a line of code where you initialize the variable with some (string) value of your choice and try running the code cell again.\n",
     "\n",
     "---"
    ]
@@ -292,7 +294,9 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 1.2.4** Run the first cell below. In the second code cell, change the variable '`abrahams_age`' from string to int and try to figure out how to print out the same text as in the first cell. You might have to discard the whole variable '`sentence`' (or alternatively figure out what the function `str()` does if you feed it an integer).\n",
+    "**Ex 1.2.4** Run the first cell below. In the second code cell, change the variable '`abrahams_age`' from string to int and try to figure out how to print out the same text as in the first cell. You need to somehow change the variable '`sentence`' and the contents of the `print` function (or alternatively figure out what the function `str()` does if you feed it an integer).\n",
+    "\n",
+    "Hint: Remember, a few code cell back we saw that you cannot add together a string and an int.\n",
     "\n",
     "---"
    ]
@@ -548,7 +552,7 @@
     "collapsed": true
    },
    "source": [
-    "We'll now move on to two very useful data types: **lists** and **sets**. Let's start with a motivating example; again, run the cell and see if you can figure out what the code does before reading on."
+    "We'll now move on to two very useful data types: **lists** and **sets**. Let's start with a motivating example; again, run the cell and see if you can figure out what the code does before reading on. If you get stuck, just read on and the concepts will be explained."
    ]
   },
   {
@@ -600,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next in the code (4-5) we print out a few compliments to the turtles (and the rat), going through the names in alphabetical order. Going through all the elements in a list one by one is called **iteration**. The syntax for simple iteration is very intuitive in Python. This is called the for-loop:\n",
+    "Next in the example code (lines 4-5) we print out a few compliments to the turtles (and the rat), going through the names in alphabetical order. Going through all the elements in a list one by one is called **iteration**. The syntax for simple iteration is very intuitive in Python. This is called the for-loop:\n",
     "\n",
     "    for thing in list:\n",
     "        do the thing\n",
@@ -640,7 +644,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 3.1.2** Below you are given a list of characters that make up a magic word. Use a for-loop and string concatenation (\"+\" from section 1.2) to construct the word. In other words, find a way to go from a list of characters to a single string consisting of those characters: `[\"a\", \"b\", \"c\"] ==> \"abc\"`. Look at how the number was incremented in the code cell above for inspiration (`number = number + n`).\n",
+    "**Ex 3.1.2** Below you are given a list of characters that make up a magic word (\"covfefe\"). Use a for-loop and string concatenation (\"+\" from section 1.2) to construct the word. In other words, find a way to go from a list of characters to a single string consisting of those characters: `[\"a\", \"b\", \"c\"] ==> \"abc\"`. Look at how the number was incremented in the code cell above for inspiration (`number = number + n`).\n",
     "\n",
     "---"
    ]
@@ -810,7 +814,7 @@
     "collapsed": true
    },
    "source": [
-    "Above we saw that you can feed both strings and lists to the `set` function and you will get out the unique elements that make up what you fed in (characters in the case of a string, strings in the case of a list of strings). The similarities between strings and lists do not end there, however. Actually, strings and lists in python are variants of an underlying abstract type, **sequence**. As a result, they share many of the operations we have already seen (for-loop also works with strings, you can concatenate lists like strings etc.) In this section we introduce two more operations that work with both lists and strings: **indexing** and **slicing**. Again, see the example code in the next cell."
+    "Above we saw that you can feed both strings and lists to the `set` function and you will get out the unique elements that make up what you fed in (characters in the case of a string, strings in the case of a list of strings). The similarities between strings and lists do not end there, however. Actually, strings and lists in python are variants of an underlying abstract type, **sequence**. As a result, they share many of the operations we have already seen (for-loop also works with strings, you can concatenate lists like strings etc.) In this section we introduce two more operations that work with both lists and strings: **indexing** and **slicing**. Again, see the example code in the next cell and read the explanations that follow."
    ]
   },
   {
@@ -960,16 +964,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def starts_with(string1, string2):\n",
-    "    string_start = string1[:len(string2)]\n",
-    "    return string_start == string2\n",
-    "\n",
-    "    # return None\n",
+    "    # 'None' is simply a placeholder value,\n",
+    "    # you should change this function to return\n",
+    "    # True of False depending on whether the\n",
+    "    # condition specified in the exercise is met.\n",
+    "    return None\n",
     "\n",
     "print(starts_with(\"application\", \"app\"))"
    ]
